--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: ChenQinfeng
 subtitle:
 description:
-author: John Doe
+author: ChenQinfeng
+email: androidchenqinfeng@gmail.com
 language: zh-Hans
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://chenqinfeng.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -64,7 +65,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
-
+avatar: /uploads/avatar.jpg
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
