--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,16 @@ root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
+# Analytics
+baidu_analytics: 9f6a7eb200643de2d86ec301b2f6dea3
+# Social links
+social:
+  github: https://github.com/jokerknight
+  weibo: http://weibo.com/u/2667233554
+  douban: http://www.douban.com/people/chenqinfeng/
+  instagram: https://www.instagram.com/takeknight/
+  google+: https://plus.google.com/u/0/105448577659348421554
+  # 等等
 # Directory
 source_dir: source
 public_dir: public
@@ -65,7 +75,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
-avatar: /uploads/avatar.jpg
+avatar: /images/default_avatar.jpg
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
